html and scss ui component

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
-  <app-root></app-root>
+  <app-root>
+    <!-- genere dans le dom une instance de app component html -->
+  </app-root>
 </body>
 
 </html>
